# pointflow

./: .env.example  .gitignore  LICENSE  README.md  dist-workspace.toml  package.json  pnpm-lock.yaml
.github/: build-setup.yml
.github/workflows/: release.yml
agent/: Cargo.toml
agent/src/: hooks.rs  input.rs  main.rs  mirror.rs  protocol.rs  push.rs  service.rs  shells.rs  tabs.rs  term.rs  tmux.rs  util.rs  wintabs.rs
docs/: COPILOT.md  DISTRIBUTION.md  ROADMAP.md  TERMINAL_STREAMING.md  VALIDATION.md
phone/: next.config.ts  package.json  pnpm-lock.yaml
phone/public/: sw.js
phone/src/app/: globals.css  layout.tsx  page.tsx
phone/src/components/: ControlButtons.tsx  CopilotCard.tsx  PadButton.tsx  PhotoButton.tsx  ScrollStrip.tsx  SettingsSheet.tsx  StatusBar.tsx  TerminalSheet.tsx  TextBar.tsx  Trackpad.tsx
phone/src/lib/: clipboard.ts  history.ts  protocol.ts  push.ts  scroller.ts  settings.tsx  useAgent.ts  useTrackpad.ts  useViewport.ts
src/db/: schema.ts
