[package]
name = "pointflow-agent"
version = "0.1.0"
edition = "2021"
description = "PointFlow desktop agent — serves the phone UI and injects mouse/keyboard input on macOS"

[[bin]]
name = "pointflow-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
enigo = "0.2"
core-graphics = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
qrcode = "0.14"
local-ip-address = "0.6"
rand = "0.8"
portable-pty = "0.8"
futures-util = "0.3"
web-push = "0.11.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
