[package]
name = "pointflow-agent"
version = "0.2.1"
edition = "2021"
description = "Your phone as trackpad, keyboard and Claude Code remote for your computer"
repository = "https://github.com/supreeth-Finsamudra/pointflow"
homepage = "https://github.com/supreeth-Finsamudra/pointflow"
license = "MIT"

[[bin]]
name = "pointflow-agent"
path = "src/main.rs"

# `brew install supreeth-Finsamudra/pointflow/pointflow`
[package.metadata.dist]
formula = "pointflow"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
qrcode = "0.14"
local-ip-address = "0.6"
rand = "0.8"
portable-pty = "0.8"
futures-util = "0.3"
# Phone UI baked into the binary (release), read live from disk (debug).
rust-embed = "8"
mime_guess = "2"

# Native pixel-unit scroll events (enigo only does coarse lines).
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

# Web Push pulls in ece → openssl, which is not sanely buildable for Windows
# targets; push is stubbed there until we move to a RustCrypto implementation
# (see docs/ROADMAP.md Phase 4). p256 generates the VAPID key in pure Rust so
# the agent never shells out to an `openssl` binary at runtime.
[target.'cfg(not(windows))'.dependencies]
web-push = "0.11.0"
p256 = { version = "0.13", features = ["pem"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
